assets/CSS/style.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+JP&display=swap');

:root {
    --heading-font-family: 'noto sans', sans-serif;
    --text-font-family: JP, san-serif;
    --bg-color: #444444;
}

* {
    margin: 0;
    padding: 0;
    border: none;
}


nav {
    box-shadow: 0 5px 5px 0 rgba(41, 7, 236, 0.2);
}

nav a:hover {
    font-size: 110%;
    border-bottom: dotted red;
}

body {
    padding-top: 70px;
    font-family: var(--text-font-family);
    color: var(--bg-color)
}

h1,
h2 {
    font-family: var(--heading-font-family);
}

a {
    text-decoration: none;
    color: #fdf5e6;
    text-shadow: 1px 1px #444;
    font-family: var(--heading-font-family);
}

.center-text {
    text-align: center;
}

/* logo size */

.logo-img {
    width: 50px;
}

/* footer */

footer {
    background-color: 	#212529;
    height: 50px;
    display: flex;
    justify-content: space-between;
    height: 50px;
    margin: 10px 0 -10px;
    padding-bottom: 0;
    text-decoration: none;
    color: #fdf5e6;
    list-style: none;
}

footer .logo-img {
    height: 50px;
    width: 50px;
    margin: 0;
    padding: 0;
}

footer span {
    padding: 10px 0;
}

.sns {
    font-size: 200%;
    list-style: none;
    text-decoration: none;
    letter-spacing: 10px;
    display: inline-flex;
}

/* Hero image */

.hero-wrapper {
    height: 300px;
    width: 100vw;
}

.hero-image {
   position: relative;
    background-image: url(../images/hero-image.jpg);
    margin-bottom: 10px;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: bottom left;
}

.hero-text {
    position: absolute;
    left: 2vw;
    width: 300px;
    height: auto;
    padding: 10px;
    margin-top: 30px;
    border-radius: 10%;
    background-color: rgb(253, 245, 230, 0.5);
    color: #1d1b14;
    text-align: center;
    text-shadow: 1px 1px rgb(41, 7, 236);
}

label {
    width: 120px;
}


/* Category section */


/* category link text code partly copied from techacademy.jp */

.cat-link {
    position: relative;
    background: linear-gradient(223deg, rgba(228, 189, 44, 1) 0%, rgba(142, 39, 11, 1) 100%);
}

.cat-link p {
    position: absolute;
    top: 40%;
    left: 10%;
    font-size: 40px;
    color: #fafafa;
    letter-spacing: -1px;
}

.cat-link p:hover {
color: var(--bg-color);
}

.img-200 {
    height: 200px;
    width: 25vw;
}

.img-100 {
    height: 100px;
    width: 25vw;
}

.cat-link img {
    opacity: 0.1;
}

.cat-pic {
    z-index: -1;
}

.cat-icon {
    font-size: 2rem;
    border: 1px solid var(--bg-color);
    border-radius: 50%;
}

/*Feedback page */

.feedback_img {
    background-image: url(../images/feedback_img.jpg);
    height: 300px;
    background-repeat: no-repeat;
    background-size: cover;
}

.vertical-top {
    display: inline;
    vertical-align: top;
    width: 150px;
}


/* Feedback form */

input,
textarea,
select {
    width: 100%;
    border: 0;
  outline: 0;
   border-bottom:1px solid var(--bg-color)
}

.send-btn {
    width: 100%;
}


.focus:focus {
    background: papayawhip;
}




.fb-grid-container {
    display: grid;
    grid-template-columns: 2fr 2fr 1fr 2fr 2fr;
    grid-template-rows: 1fr 1fr 3fr 1fr;
}



@media only screen and (max-width: 600px) {

    .hero-text {
        width: 250px;
        margin: 20px auto;
    }
}

@media only screen and (max-width: 770px) {
    /* category-images */

    .img-200,
    .img-100 {
        width: 50vw;
    }
}

@media only screen and (max-width: 900px) {
    .cat-link p {
        font-size: 20px;
    }

    input,
select, textarea {
    width: 90%;
   
}
}

@media only screen and (min-height: 1024px) {}

